# toulousenfeu

./: .gitignore  Cargo.toml  bot.py  main.py  normales.csv  readme.MD  requirements.txt
data/: normales-rust.csv
oldpython/: Makefile  pyproject.toml
oldpython/src/: connect.py  convert.py  twittertext.py
src/: connect.py  csv.rs  htmlpng.rs  main.rs  readfile.py  toulousenfeu.py  twittertext.py
template/: input.css  input.html
