[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toulousenfeu"
version = "0.2.0"
authors = [
  { name="Yohan Boujon", email="yo.boujon@gmail.com" },
]
description = "Twitter bot for Toulouse's temperatures"
readme = "readme.MD"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yoboujon/toulousenfeu"